--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
       "noImplicitAny": true,
       "removeComments": true,
       "preserveConstEnums": true,
-      "outFile": "Build/out.js",
+      "outFile": "docs/out.js",
       "sourceMap": true,
       "target":"es5",
       "alwaysStrict":true,
